--- a/html/main.html
+++ b/html/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="uiRouter">
+<html ng-app="reservas">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../lib/bootstrap.min.css" />
@@ -11,21 +11,13 @@
   </head>
   <body>
 
-  	<nav class="navbar navbar-default" role="navigation">
+  	<nav class="navbar navbar-fixed-top navbar-default" role="navigation">
 	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="main.html">UPC Emprèn</a>
+        <a class="navbar-brand" href="main.html"> UPC Emprèn</a>
 	    </div>
 
-	    <div class="collapse navbar-collapse navbar-ex1-collapse pull-right">
-	    	<ul class="nav navbar-nav side-nav">
-	    		<li><button type="button" class="btn btn-default"><a href="#/login">Login</a></button></li>
-	    	</ul>
+	    <div class="navbar-right">
+	    		<button type="button" class="btn btn-default"><a href="#/login">Login</a></button>
 	    </div>
 	</nav>
 
