--- a/html/index.html
+++ b/html/index.html
@@ -10,52 +10,71 @@
 
   </head>
   <body>
+    <div class="page">
+      
+    	<nav class="navbar navbar-fixed-top navbar-default" role="navigation">
+  	    <div class="navbar-header">
+          <a class="navbar-brand" href="main.html"> UPC Emprèn</a>
+  	    </div>
 
-  	<nav class="navbar navbar-fixed-top navbar-default" role="navigation">
-	    <div class="navbar-header">
-        <a class="navbar-brand" href="main.html"> UPC Emprèn</a>
-	    </div>
+  	    <div class="navbar-right">
+  	    		<button data-toggle="modal" class="btn btn-default" href="#myModal">Login</button>
+  	    </div>
+  	  </nav>
 
-	    <div class="navbar-right">
-	    		<button type="button" class="btn btn-default"><a href="#/login">Login</a></button>
-	    </div>
-	  </nav>
-
-    <div class="sub-header">
-      <div class="sub-layer">
-        <h3 id="sub-title">Què és l'espai d'emprenedoria?</h3>
-        <p id="sub-title-answer">Espai adreçat a estudiants o recent titulats (< 2 anys) que tinguin un idea de negoci i necessitin un espai per poder‐la transformar en realitat, poden desenvolupar-les en fases inicials rebent formació i assessorament.<br>
-        <br>
-        Emprèn UPC, al qual s’hi podrà accedir amb el carnet UPC durant els 365 dies de l’any, ocupa una superfície de més de 500 m2 i disposa de llocs de treball per a grups d’entre dues i sis persones. Inclou una sala de reunions amb capacitat per a nou persones, així com zones condicionades per a networking i una àrea de recursos compartits. L’espai, que també integra un magatzem i zona de serveis (cuina i menjador), està equipada amb 30 taquilles i xarxa Wi-Fi.<br>
-        <br>
-        Es preveu que el període d’ocupació dels llocs de treball per part dels equips emprenedors sigui d’un màxim d’un any.<br>
-        <br>
-        L’Espai d’Emprenedoria Emprèn UPC és un projecte realitzat conjuntament amb l’Ajuntament de Barcelona (Barcelona Activa).<br>
+      <div id="myModal" class="modal fade" style="display: none; ">
+        <div id="myModalBox">
+          <div class="modal-header">
+            <button class="close" data-dismiss="modal">×</button>
+            <h3>Please sign in</h3>
+          </div>
+          <input type="email" class="form-control" placeholder="Email address" required="" autofocus="">
+          <input type="password" class="form-control" placeholder="Password" required="">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" value="remember-me"> Remember me
+            </label>
+          </div>
+          <div class="modal-footer">
+            <a href="#" class="btn" data-dismiss="modal">Close</a>
+            <a href="#" class="btn btn-primary">Login</a>
+          </div>
+        </div>
       </div>
-    </div>
 
-    <div class="info-reservas">
-      <h3 id="title">Reserva sales de l'àrea d'emprenedoria</h3>
-      <br>
-      <ul id="title-answer">
-        <li>Consulta les aules disponibles per reservar</li>
-        <br>
-        <li>Consulta els horaris de reserva de les diferents aules</li>
-        <br>
-        <li>Fes les teves pròpies reserves de les aules</li>
-        <br>
-        <li>Modifica o cancel·la les teves reserves</li>
-      </ul>
-    </div>
+      <div class="sub-header">
+        <div class="sub-layer">
+          <h3 id="sub-title">Què és l'espai d'emprenedoria?</h3>
+          <p id="sub-title-answer">Espai adreçat a estudiants o recent titulats (< 2 anys) que tinguin un idea de negoci i necessitin un espai per poder‐la transformar en realitat, poden desenvolupar-les en fases inicials rebent formació i assessorament.<br>
+          <br>
+          Emprèn UPC, al qual s’hi podrà accedir amb el carnet UPC durant els 365 dies de l’any, ocupa una superfície de més de 500 m2 i disposa de llocs de treball per a grups d’entre dues i sis persones. Inclou una sala de reunions amb capacitat per a nou persones, així com zones condicionades per a networking i una àrea de recursos compartits. L’espai, que també integra un magatzem i zona de serveis (cuina i menjador), està equipada amb 30 taquilles i xarxa Wi-Fi.<br>
+          <br>
+          Es preveu que el període d’ocupació dels llocs de treball per part dels equips emprenedors sigui d’un màxim d’un any.<br>
+          <br>
+          L’Espai d’Emprenedoria Emprèn UPC és un projecte realitzat conjuntament amb l’Ajuntament de Barcelona (Barcelona Activa).<br>
+        </div>
+      </div>
 
-    <div class="footer">
-      <h4 id="patrocinadors">Patrocinadors Espai</h4>
-      <div id="img-ajunt"></div>
-    </div>
+      <div class="info-reservas">
+        <h3 id="title">Reserva sales de l'àrea d'emprenedoria</h3>
+        <br>
+        <ul id="title-answer">
+          <li>Consulta les aules disponibles per reservar</li>
+          <br>
+          <li>Consulta els horaris de reserva de les diferents aules</li>
+          <br>
+          <li>Fes les teves pròpies reserves de les aules</li>
+          <br>
+          <li>Modifica o cancel·la les teves reserves</li>
+        </ul>
+      </div>
 
-  	<div class="below-navbar">
-	    <div ui-view class="inserted-content"></div>
-	  </div>
+      <div class="footer">
+        <h4 id="patrocinadors">Patrocinadors Espai:</h4>
+        <div id="img-ajunt"></div>
+      </div>
+
+    </div>
 
     <script type="text/javascript" src="../lib/underscore.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
