--- a/html/main.html
+++ b/html/main.html
@@ -1,41 +1,22 @@
-<!DOCTYPE html>
-<html ng-app="reservas">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="../lib/bootstrap.min.css" />
-    <link rel="stylesheet" href="../lib/bootstrap.css" />
-
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/login.css" />
-
-  </head>
-  <body>
-
   	<nav class="navbar navbar-fixed-top navbar-default" role="navigation">
 	    <div class="navbar-header">
         <a class="navbar-brand" href="main.html"> UPC Emprèn</a>
 	    </div>
+
+      <div class="navbar-right">
+        <button data-toggle="modal" class="btn btn-default" href="#myModal">Sign Out</button>
+      </div>
 	  </nav>
 
   	<div class="side-bar">
   		<div class="navbar-stacked">
 		  	<ul class="nav nav-pills nav-stacked">
+          <li><a href="#/reservas">Mis Reservas</a></li>
 		  		<li><a href="#/areas">Areas</a></li>
-		  		<li><a href="#/reservas">Reservas</a></li>
 		  	</ul>
   	  </div>
     </div>
 
   	<div class="center-area">
-	    <div ui-view class="inserted-content"></div>
+	    <div ui-view class="inserted-content-main"></div>
 	  </div>
-
-    <script type="text/javascript" src="../lib/underscore.js"></script>
-    <script type="text/javascript" src="../lib/angular.js"></script>
-    <script type="text/javascript" src="../lib/angular-ui-router.js"></script>
-    <script type="text/javascript" src="../lib/jquery-1.11.1.min.js"></script>
-    <script src="../lib/bootstrap.js"></script>
-    <script type="text/javascript" src="../js/app.js"></script>
-    
-  </body>
-</html>
