Error Login a arreglar

--- a/html/main.html
+++ b/html/main.html
@@ -11,8 +11,8 @@
   	<div class="side-bar">
   		<div class="navbar-stacked">
 		  	<ul class="nav nav-pills nav-stacked">
-          <li><a href="#/reservas">Mis Reservas</a></li>
-		  		<li><a href="#/areas">Areas</a></li>
+          <li><a ui-sref=".reservas">Mis Reservas</a></li>
+		  		<li><a ui-sref=".areas">Areas</a></li>
 		  	</ul>
   	  </div>
     </div>
