--- a/html/root.html
+++ b/html/root.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../lib/bootstrap.css" />
 
     <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 
   </head>
   <body>
@@ -16,6 +17,7 @@
 
   	<script type="text/javascript" src="../lib/underscore.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
+    <script type="text/javascript" src="../lib/angular-cookies.js"></script>
     <script type="text/javascript" src="../lib/angular-ui-router.js"></script>
     <script type="text/javascript" src="../lib/jquery-1.11.1.min.js"></script>
     <script src="../lib/bootstrap.js"></script>
