Boton Calendario en las Areas

--- a/html/areas.html
+++ b/html/areas.html
@@ -3,6 +3,7 @@
 	<span ng-repeat="i in json_data.data"> 
 	<div class="rowTable" id="top">
 		<h4>{{i.codi}} </h4>
+		<button id="calendarButton"><a ui-sref="main.calendar">Calendario</a></button>
 	</div>
 	<div class="rowTable" id="bottom">
 		<h4>{{i.descripcio}} </h4>
