--- a/html/index.html
+++ b/html/index.html
@@ -6,25 +6,25 @@
     </div>
 
     <div class="navbar-right">
-        <button data-toggle="modal" class="btn btn-default" href="#myModal">Login</button>
+        <button data-toggle="modal" class="btn btn-default" id="loginButton" href="#myModal">Login</button>
     </div>
   </nav>
 
-     <div id="myModal" class="modal fade" style="display: none; ">
+  <div id="myModal" class="modal fade" style="display: none; ">
     <div id="myModalBox">
       <div class="modal-header">
         <button class="close" data-dismiss="modal">×</button>
-        <h3>Please sign in</h3>
+        <h3>Escrigui les seves dades:</h3>
       </div>
-      <input type="text" class="form-control" placeholder="Username" required="" autofocus="" ng-model="username">
-      <input type="password" class="form-control" placeholder="Password" required="" ng-model="password">
-      <div class="checkbox">
+      <input type="text" class="form-control" placeholder="Usuari" required="" autofocus="" ng-model="username">
+      <input type="password" class="form-control" placeholder="Contrasenya" required="" ng-model="password">
+      <!--<div class="checkbox">
         <label>
           <input type="checkbox" value="remember-me"> Remember me
         </label>
-      </div>
+      </div>-->
       <div class="modal-footer">
-        <a href="#" class="btn" data-dismiss="modal">Close</a>
+        <a href="#" class="btn" data-dismiss="modal">Tanca</a>
         <a class="btn btn-primary" data-dismiss="modal" ng-click="login(username, password)">Login</a>
       </div>
     </div>
