--- a/html/main.html
+++ b/html/main.html
@@ -1,12 +1,30 @@
   	<nav class="navbar navbar-fixed-top navbar-default" role="navigation">
 	    <div class="navbar-header">
-        <a class="navbar-brand" href="main.html"> UPC Emprèn</a>
+        <a class="navbar-brand" ui-sref="index"> UPC Emprèn</a>
 	    </div>
 
       <div class="navbar-right">
-        <button data-toggle="modal" class="btn btn-default" ng-click="logOff()">Sign Out</button>
+        <button data-toggle="modal" class="btn btn-default" id="signOutButton" ng-click="logOff()">Sign Out</button>
+        <button data-toggle="modal" class ="btn btn-default" id="signUpButton" href="#myModal2">Create User</button>
       </div>
 	  </nav>
+
+    <div id="myModal2" class="modal fade" style="display: none;">
+      <div id="myModalBox">
+        <div class="modal-header">
+          <button class="close" data-dismiss="modal">×</button>
+          <h3>Ompli les seves de l'usuari:</h3>
+        </div>
+        <input type="text" class="form-control" placeholder="Nom" required="" autofocus="" ng-model="name">
+        <input type="text" class="form-control" placeholder="Cognom" required="" autofocus="" ng-model="surname">
+        <input type="text" class="form-control" placeholder="Usuari" required="" autofocus="" ng-model="username">
+        <input type="password" class="form-control" placeholder="Contrasenya" required="" ng-model="password">
+        <div class="modal-footer">
+          <a href="#" class="btn" data-dismiss="modal">Tanca</a>
+          <a class="btn btn-primary" data-dismiss="modal" ng-click="createUser(username, password, name, surname)">Sign Up</a>
+        </div>
+      </div>
+    </div>
 
   	<div class="side-bar" id="side-div">
   		<div class="navbar-stacked">
