--- a/html/root.html
+++ b/html/root.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="../lib/bootstrap.min.css" />
     <link rel="stylesheet" href="../lib/bootstrap.css" />
 
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+<!--
+    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../bower_components/html5-boilerplate/css/normalize.css">
+    <link rel="stylesheet" href="../bower_components/html5-boilerplate/css/main.css">-->
+
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/app.css" />
@@ -29,6 +35,7 @@
     <script type="text/javascript" src="../js/indexCtrl.js"></script>
     <script type="text/javascript" src="../js/areasCtrl.js"></script>
     <script type="text/javascript" src="../js/mainCtrl.js"></script>
+    <script type="text/javascript" src="../js/calendarCtrl.js"></script>
     
   </body>
 </html>
