--- a/html/calendar.html
+++ b/html/calendar.html
@@ -1,4 +1,7 @@
 
-  <div style="display:inline-block; min-height:290px;">
-    <datepicker ng-model="dt" min-date="minDate" show-weeks="true" class="well well-sm"></datepicker>
-  </div>
+<div style="display:inline-block; min-height:290px;">
+  <datepicker ng-model="dt" min-date="minDate" show-weeks="true" class="well well-sm"></datepicker>
+</div>
+
+<form ng-submit="novaReserva()"></form>
+
