--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
   
 	<nav class="navbar navbar-fixed-top navbar-default" role="navigation">
     <div class="navbar-header">
-      <a class="navbar-brand" href="index.html"> UPC Emprèn</a>
+      <a class="navbar-brand" ui-sref="index"> UPC Emprèn</a>
     </div>
 
     <div class="navbar-right">
@@ -18,11 +18,6 @@
       </div>
       <input type="text" class="form-control" placeholder="Usuari" required="" autofocus="" ng-model="username">
       <input type="password" class="form-control" placeholder="Contrasenya" required="" ng-model="password">
-      <!--<div class="checkbox">
-        <label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-      </div>-->
       <div class="modal-footer">
         <a href="#" class="btn" data-dismiss="modal">Tanca</a>
         <a class="btn btn-primary" data-dismiss="modal" ng-click="login(username, password)">Login</a>
