--- a/html/root.html
+++ b/html/root.html
@@ -2,7 +2,6 @@
 <html ng-app="reservas">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../lib/bootstrap.min.css" />
     <link rel="stylesheet" href="../lib/bootstrap.css" />
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
@@ -15,19 +14,12 @@
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/app.css" />
 
-  </head>
-  <body>
-
-  	<div>
-  		<div ui-view class="inserted-content"></div>
-  	</div>
-
-  	<script type="text/javascript" src="../lib/underscore.js"></script>
+    <script type="text/javascript" src="../lib/underscore.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
     <script type="text/javascript" src="../lib/angular-cookies.js"></script>
     <script type="text/javascript" src="../lib/angular-ui-router.js"></script>
-    <script type="text/javascript" src="../lib/jquery-1.11.1.min.js"></script>
-    <script src="../lib/bootstrap.js"></script>
+    <!--<script type="text/javascript" src="../lib/jquery-1.11.1.min.js"></script>-->
+    <!--<script src="../lib/bootstrap.js"></script>-->
 
     <script src="../lib/ui-bootstrap-tpls-0.11.0.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
@@ -36,6 +28,24 @@
     <script type="text/javascript" src="../js/areasCtrl.js"></script>
     <script type="text/javascript" src="../js/mainCtrl.js"></script>
     <script type="text/javascript" src="../js/calendarCtrl.js"></script>
-    
+    <script type="text/javascript" src="../js/accountCtrl.js"></script>
+
+
+    <script type="text/javascript" src="../js/reservasCtrl.js"></script>
+    <script type="text/javascript" src="../js/modal/errorModalCtrl.js"></script>
+    <script type="text/javascript" src="../js/modal/deleteModalCtrl.js"></script>
+    <script type="text/javascript" src="../js/modal/loginModalCtrl.js"></script>
+    <script type="text/javascript" src="../js/modal/newUserModalController.js"></script>
+    <script type="text/javascript" src="../js/modal/newEspaiModalController.js"></script>
+    <script type="text/javascript" src="../js/modal/deleteModalCtrl.js"></script>
+    <script type="text/javascript" src="../js/modal/deleteEspaiModalCtrl.js"></script>
+
+
+  </head>
+  <body>
+  <div class="main-container">
+    <div ui-view class="inserted-content"></div>
+  </div>
+
   </body>
 </html>
