--- a/html/modals/loginModal.html
+++ b/html/modals/loginModal.html
@@ -1,6 +1,6 @@
 <div class="loginModal">
   <div class="modal-header">
-    <button class="close" data-dismiss="modal">×</button>
+    <button class="close" ng-click="cancel()">×</button>
     <h3>Escrigui les seves dades:</h3>
   </div>
   <div class="modal-body">
@@ -10,7 +10,7 @@
   </div>
 
   <div class="modal-footer">
-    <a href="#" class="btn" data-dismiss="modal">Tanca</a>
+    <a href="#" class="btn" ng-click="cancel()">Tanca</a>
     <a class="btn btn-primary" data-dismiss="modal" ng-click="login()">Login</a>
   </div>
 </div>
