changed IP server to production

--- a/html/modals/newEspaiModal.html
+++ b/html/modals/newEspaiModal.html
@@ -7,6 +7,6 @@
   <input type="text" class="form-control" placeholder="Descripció" required="" autofocus="" ng-model="description">
   <div class="modal-footer">
     <a href="#" class="btn" ng-click="cancel()">Tanca</a>
-    <a class="btn btn-primary" data-dismiss="modal" ng-click="createEspai(name, description)">Crear espai</a>
+    <a class="btn btn-primary" ng-click="createEspai(name, description)">Crear espai</a>
   </div>
 </div>
