Fixed translations and some navbar margins

--- a/html/main.html
+++ b/html/main.html
@@ -14,7 +14,7 @@
   	<div class="side-bar" id="side-div">
   		<div class="navbar-stacked">
 		  	<ul class="nav nav-pills nav-stacked">
-          <li><a ui-sref=".reservas">Mis Reservas</a></li>
+          <li><a ui-sref=".reservas">Les meves reserves</a></li>
 		  		<li><a ui-sref=".areas">Espais</a></li>
 		  	</ul>
   	  </div>
