--- a/html/account.html
+++ b/html/account.html
@@ -2,7 +2,7 @@
   <h1>{{user.nom}} {{user.cognoms}}</h1>
 
   <div>
-    <h3>Cambiar contrasenya</h3>
+    <h3>Canviar contrasenya</h3>
 
     <form ng-submit="cambiarContrasenya()">
       <div class="form-group">
@@ -15,12 +15,12 @@
         <input class="form-control" type="password" ng-model="data.newPassword">
       </div>
       <div class="form-group">
-        <label>Repeteix la nova contraseña</label>
+        <label>Repeteix la nova contrasenya</label>
         <input class="form-control" type="password" ng-model="data.repeatNewPassword">
       </div>
 
       <div class="form-group">
-        <input type="submit" class="btn btn-info btn-lg" value="Cambiar">
+        <input type="submit" class="btn btn-info btn-lg" value="Canviar">
       </div>
 
       <div ng-if="errorText">
