Fixed some more translations and added a title

--- a/root.html
+++ b/root.html
@@ -2,10 +2,13 @@
 <html ng-app="reservas">
   <head>
     <meta charset="utf-8">
+
+    <title>Reserves Espai Emprèn</title>
+
     <link rel="stylesheet" href="lib/bootstrap.css" />
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-<!--
+    <!--
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../bower_components/html5-boilerplate/css/normalize.css">
     <link rel="stylesheet" href="../bower_components/html5-boilerplate/css/main.css">-->
