--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <div class="page">
-  
+
 	<nav class="navbar navbar-fixed-top navbar-default" role="navigation">
     <div class="navbar-header">
       <a class="navbar-brand" ui-sref="index"> UPC Emprèn</a>
@@ -41,8 +41,8 @@
   <div class="footer">
     <!--<h4 id="patrocinadors">Patrocinadors Espai:</h4>-->
     <div id="direccion">
-      <h4>Dirección:</h4>
-      Sala d'emprenedoria<br>
+      <h4>Adreça:</h4>
+      Sala d'emprenedoria, Edifici C6<br>
       C/Jordi Girona Salgado,1-3<br>
       08034 BARCELONA<br>
       Espanya
